@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1308 2013/07/09 21:47:57 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1309 2013/07/10 20:41:49 zmedico Exp $
+
+  10 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.12.13.ebuild,
+  portage-2.2.0_alpha188.ebuild:
+  Drop unmaintained linguas_pl, bug #476368.
 
 *portage-2.2.0_alpha188 (09 Jul 2013)
 
